[workspace]
members = ["cli_status", "error", "path_ext", "progrep", "test_utils", "utils"]
resolver = "2"

[workspace.package]
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2021"
license = "MIT-0"

[workspace.dependencies]
clap = "4.2.2"
filetime = "0.2.21"
lazy_static = "1.4.0"
ljumvall_error = { path = "error", version = "0.1.0" }
rand = "0.8.5"
rand_map = "0.1.0"
regex = "1.7.3"
termsize = "0.1.6"
thiserror = "1.0.40"
unicode-segmentation = "1.10.1"

