[package]
name = "ljumvall_path_ext"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "A trait with implementation that extends std::path::Path"
version = "0.1.0"

[dependencies]
filetime.workspace = true

[dev-dependencies]
ljumvall_test_utils = { path = "../test_utils" }
speculate2 = "*"
