[package]
name = "ljumvall_progrep"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Facilitates making progress messages and data available"
version = "0.1.0"

[dependencies]
ljumvall_error.workspace = true
rand_map.workspace = true
thiserror.workspace = true

[dev-dependencies]
speculate2 = "*"
